- reload issues fix

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>CareerCompass - Your Career Development Platform</title>
+    <meta name="description" content="Comprehensive career development platform for Indian students with AI-powered guidance, personalized learning paths, and mentorship opportunities." />
+    <meta name="theme-color" content="#6366f1" />
   </head>
   <body>
     <div id="root"></div>
